--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,21 +1,109 @@
+@import url("https://fonts.googleapis.com/earlyaccess/notosanskr.css");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  /* :root를 사용하여 배경색 변경 */
+  background-color: #000000; /* 작은 화면에서는 회색 배경 */
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+/* 아이폰 16 기준 반응형 설정 */
+@media screen and (max-width: 393px) {
+  body {
+    background-color: #ffffff; /* 작은 화면에서는 흰색 배경 */
+    font-family: "Noto Sans KR", sans-serif; /* 폰트 적용 */
+    font-size: 14px; /* 작은 화면에서는 글씨 크기 줄이기 */
+    padding: 10px; /* 패딩을 줄여서 공간 확보 */
+
+    /* 버튼 컴포넌트 */
+  .active-button {
+    background-color: #490085;
+    color: #ffffff;
+    border-radius: 10px;
+    width: 144px;
+    height: 51px;
+    font-size: 17px;
+  }
+
+  .nomal-button {
+    background-color: #C4C4C4;
+    color: #ffffff;
+    border-radius: 10px;
+    width: 144px;
+    height: 51px;
+    font-size: 17px;
+  }
+
+  /* 긴 버튼 컴포넌트 */
+  .long-active-button {
+    background-color: #490085;
+    color: #ffffff;
+    border-radius: 10px;
+    width: 327px;
+    height: 51px;
+    font-size: 17px;
+  }
+
+  .long-nomal-button {
+    background-color: #C4C4C4;
+    color: #ffffff;
+    border-radius: 10px;
+    width: 327px;
+    height: 51px;
+    font-size: 17px;
+  }
+
+  /* 중간 버튼 컴포넌트 */
+  .middle-active-button {
+    background-color: #490085;
+    color: #ffffff;
+    border-radius: 10px;
+    width: 288px;
+    height: 51px;
+    font-size: 17px;
+  }
+
+  .middle-nomal-button {
+    background-color: #C4C4C4;
+    color: #ffffff;
+    border-radius: 10px;
+    width: 288px;
+    height: 51px;
+    font-size: 17px;
+  }
+
+  /* 블랙 - 가장 굵게 */
+  .black {
+    font-weight: 900;
+  }
+
+  /* 볼드 */
+  .bold {
+    font-weight: 700;
+  }
+
+  /* 미디엄 */
+  .medium {
+    font-weight: 400;
+  }
+
+  /* 레귤러 */
+  .regular {
+    font-weight: 300;
+  }
+
+  /* 라이트 */
+  .light {
+    font-weight: 200;
+  }
   }
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  width: 390px;
+  height: 852px;
+  background-color: #ffffff; /* 4 배경은 흰색 */
+  font-family: "Noto Sans KR", sans-serif; /* 기본 폰트 설정 */
+  margin: 0 auto; /* 가로 가운데 정렬 */  
 }
