--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
 
 :root {
   /* :root를 사용하여 배경색 변경 */
-  background-color: #000000; /* 작은 화면에서는 회색 배경 */
+  background-color: #ffffff; /* 작은 화면에서는 회색 배경 */
 }
 
 /* 아이폰 16 기준 반응형 설정 */
@@ -15,194 +15,217 @@
     font-family: "Noto Sans KR", sans-serif; /* 폰트 적용 */
     font-size: 14px; /* 작은 화면에서는 글씨 크기 줄이기 */
     padding: 10px; /* 패딩을 줄여서 공간 확보 */
-    height: 852px;    
+    height: 852px;
   }
 
-    /* 버튼 컴포넌트 */
-    .active-button {
-      background-color: #490085;
-      color: #ffffff;
-      border-radius: 10px;
-      width: 144px;
-      height: 51px;
-      font-size: 17px;
-    }
-
-    .nomal-button {
-      background-color: #c4c4c4;
-      color: #ffffff;
-      border-radius: 10px;
-      width: 144px;
-      height: 51px;
-      font-size: 17px;
-    }
-
-    /* 긴 버튼 컴포넌트 */
-    .long-active-button {
-      background-color: #490085;
-      color: #ffffff;
-      border-radius: 10px;
-      width: 327px;
-      height: 51px;
-      font-size: 17px;
-    }
-
-    .long-nomal-button {
-      background-color: #c4c4c4;
-      color: #ffffff;
-      border-radius: 10px;
-      width: 327px;
-      height: 51px;
-      font-size: 17px;
-    }
-
-    /* 중간 버튼 컴포넌트 */
-    .middle-active-button {
-      background-color: #490085;
-      color: #ffffff;
-      border-radius: 10px;
-      width: 288px;
-      height: 51px;
-      font-size: 17px;
-    }
-
-    .middle-nomal-button {
-      background-color: #c4c4c4;
-      color: #ffffff;
-      border-radius: 10px;
-      width: 288px;
-      height: 51px;
-      font-size: 17px;
-    }
-
-    /* 블랙 - 가장 굵게 */
-    .black {
-      font-weight: 900;
-    }
-
-    /* 볼드 */
-    .bold {
-      font-weight: 700;
-    }
-
-    /* 미디엄 */
-    .medium {
-      font-weight: 400;
-    }
-
-    /* 레귤러 */
-    .regular {
-      font-weight: 300;
-    }
-
-    /* 라이트 */
-    .light {
-      font-weight: 200;
-    }
-
-    /* 하단의 스타일들은 전체 화면에서도 아이폰 16화면으로 강제 적용 속성 */
-    /* 버튼 컴포넌트 */
-    .active-button {
-      background-color: #490085;
-      color: #ffffff;
-      border-radius: 10px;
-      width: 144px;
-      height: 51px;
-      font-size: 17px;
-    }
-
-    .nomal-button {
-      background-color: #c4c4c4;
-      color: #ffffff;
-      border-radius: 10px;
-      width: 144px;
-      height: 51px;
-      font-size: 17px;
-    }
-
-    /* 긴 버튼 컴포넌트 */
-    .long-active-button {
-      background-color: #490085;
-      color: #ffffff;
-      border-radius: 10px;
-      width: 327px;
-      height: 51px;
-      font-size: 17px;
-    }
-
-    .long-nomal-button {
-      background-color: #c4c4c4;
-      color: #ffffff;
-      border-radius: 10px;
-      width: 327px;
-      height: 51px;
-      font-size: 17px;
-    }
-
-    /* 중간 버튼 컴포넌트 */
-    .middle-active-button {
-      background-color: #490085;
-      color: #ffffff;
-      border-radius: 10px;
-      width: 288px;
-      height: 51px;
-      font-size: 17px;
-    }
-
-    .middle-nomal-button {
-      background-color: #c4c4c4;
-      color: #ffffff;
-      border-radius: 10px;
-      width: 288px;
-      height: 51px;
-      font-size: 17px;
-    }
-
-    /* 블랙 - 가장 굵게 */
-    .black {
-      font-weight: 900;
-    }
-
-    /* 볼드 */
-    .bold {
-      font-weight: 700;
-    }
-
-    /* 미디엄 */
-    .medium {
-      font-weight: 400;
-    }
-
-    /* 레귤러 */
-    .regular {
-      font-weight: 300;
-    }
-
-    /* 라이트 */
-    .light {
-      font-weight: 200;
-    }
-
-    /* 헤더 */
-    .header {
-      margin: 30px 2px 20px 0px;
-      font-size: 18px;
-      display: flex;
-      /* border: red 1px solid; */
-      align-items: center; /* 수직 정렬 */
-      justify-content: center; /* 수평 정렬 */
-    }
-
-    .header-icon {
-      /* border: rgb(51, 0, 255) 1px solid; */
-      position: absolute; /* 부모 요소를 기준으로 위치 */
-      left: 15px;
-    }
-
-    .header-text {
-      flex-grow: 1; /* 텍스트가 남는 공간을 차지하도록 함 */
-      text-align: center; /* 텍스트 가운데 정렬 */
-      /* border: rgb(51, 0, 255) 1px solid; */
-    }
+  /* 버튼 컴포넌트 */
+  .active-button {
+    background-color: #490085;
+    color: #ffffff;
+    border-radius: 10px;
+    width: 144px;
+    height: 51px;
+    font-size: 17px;
   }
 
+  .nomal-button {
+    background-color: #c4c4c4;
+    color: #ffffff;
+    border-radius: 10px;
+    width: 144px;
+    height: 51px;
+    font-size: 17px;
+  }
+
+  /* 긴 버튼 컴포넌트 */
+  .long-active-button {
+    background-color: #490085;
+    color: #ffffff;
+    border-radius: 10px;
+    width: 327px;
+    height: 51px;
+    font-size: 17px;
+  }
+
+  .long-nomal-button {
+    background-color: #c4c4c4;
+    color: #ffffff;
+    border-radius: 10px;
+    width: 327px;
+    height: 51px;
+    font-size: 17px;
+  }
+
+  /* 중간 버튼 컴포넌트 */
+  .middle-active-button {
+    background-color: #490085;
+    color: #ffffff;
+    border-radius: 10px;
+    width: 288px;
+    height: 51px;
+    font-size: 17px;
+  }
+
+  .middle-nomal-button {
+    background-color: #c4c4c4;
+    color: #ffffff;
+    border-radius: 10px;
+    width: 288px;
+    height: 51px;
+    font-size: 17px;
+  }
+
+  /* 블랙 - 가장 굵게 */
+  .black {
+    font-weight: 900;
+  }
+
+  /* 볼드 */
+  .bold {
+    font-weight: 700;
+  }
+
+  /* 미디엄 */
+  .medium {
+    font-weight: 400;
+  }
+
+  /* 레귤러 */
+  .regular {
+    font-weight: 300;
+  }
+
+  /* 라이트 */
+  .light {
+    font-weight: 200;
+  }
+
+  /* 하단의 스타일들은 전체 화면에서도 아이폰 16화면으로 강제 적용 속성 */
+  /* 버튼 컴포넌트 */
+  .active-button {
+    background-color: #490085;
+    color: #ffffff;
+    border-radius: 10px;
+    width: 144px;
+    height: 51px;
+    font-size: 17px;
+    text-align: center;
+  }
+
+  .nomal-button {
+    background-color: #c4c4c4;
+    color: #ffffff;
+    border-radius: 10px;
+    width: 144px;
+    height: 51px;
+    font-size: 17px;
+    text-align: center;
+  }
+
+  /* 긴 버튼 컴포넌트 */
+  .long-active-button {
+    background-color: #490085;
+    color: #ffffff;
+    border-radius: 10px;
+    width: 327px;
+    height: 51px;
+    font-size: 17px;
+    text-align: center;
+  }
+
+  .long-nomal-button {
+    background-color: #c4c4c4;
+    color: #ffffff;
+    border-radius: 10px;
+    width: 327px;
+    height: 51px;
+    font-size: 17px;
+    text-align: center;
+  }
+
+  /* 중간 버튼 컴포넌트 */
+  .middle-active-button {
+    background-color: #490085;
+    color: #ffffff;
+    border-radius: 10px;
+    width: 288px;
+    height: 51px;
+    font-size: 17px;
+    text-align: center;
+  }
+
+  .middle-nomal-button {
+    background-color: #c4c4c4;
+    color: #ffffff;
+    border-radius: 10px;
+    width: 288px;
+    height: 51px;
+    font-size: 17px;
+    text-align: center;
+  }
+
+  .bottom-button-postion {
+    position: fixed;
+    top : 750px;
+    z-index: 99; 
+  }
+
+  /* 블랙 - 가장 굵게 */
+  .black {
+    font-weight: 900;
+  }
+
+  /* 볼드 */
+  .bold {
+    font-weight: 700;
+  }
+
+  /* 미디엄 */
+  .medium {
+    font-weight: 400;
+  }
+
+  /* 레귤러 */
+  .regular {
+    font-weight: 300;
+  }
+
+  /* 라이트 */
+  .light {
+    font-weight: 200;
+  }
+
+  /* 헤더 */
+  .header {
+    margin: 30px 2px 20px 0px;
+    font-size: 18px;
+    display: flex;
+    /* border: red 1px solid; */
+    align-items: center; /* 수직 정렬 */
+    justify-content: center; /* 수평 정렬 */
+  }
+
+  .header-icon {
+    /* border: rgb(51, 0, 255) 1px solid; */
+    position: absolute; /* 부모 요소를 기준으로 위치 */
+    left: 15px;
+  }
+  
+  .header-icon-option {
+    /* border: rgb(51, 0, 255) 1px solid; */
+    position: absolute; /* 부모 요소를 기준으로 위치 */
+    right: 15px;
+  }
+
+  .header-text {
+    text-align: center; /* 텍스트 가운데 정렬 */
+    /* border: rgb(51, 0, 255) 1px solid; */
+  }
+
+  .travelgroups-font-size {    
+    font-size: 13px;
+  }
+
+  
+
+}
