--- a/src/styles/travelgroups/travelgroups-style.css
+++ b/src/styles/travelgroups/travelgroups-style.css
@@ -51,14 +51,12 @@
   border-radius: 50%;
 }
 
-
-
 .member-list-container {
   margin: 20px 0 40px 0;
   display: grid;
   grid-template-columns: repeat(4, 1fr); /* 4열 */
   row-gap: 10;
-  column-gap : 30;
+  column-gap: 30;
 }
 
 .member-profile {
@@ -98,15 +96,15 @@
 .travel-list-img-view {
   display: flex;
   flex-direction: row;
-  gap: 10px;    
-  padding:0 8 0 8;
+  gap: 10px;
+  padding: 0 8 0 8;
 }
 
 .travel-list-img {
   width: 159px;
   height: 201px;
   border: 1px blue solid;
-  border-radius: 13px;  
+  border-radius: 13px;
 }
 
 .travel-list-img-bar {
@@ -119,17 +117,14 @@
 
 .travelgroups-option-button {
   background-color: #490085;
-
 }
-
-
 
 .member-admin-list-container {
   margin: 20px 0 40px 0;
   display: grid;
   grid-template-columns: repeat(3, 1fr); /* 4열 */
   row-gap: 10;
-  column-gap : 40;
+  column-gap: 40;
 }
 
 .member-admin-profile {
@@ -149,7 +144,7 @@
   font-size: 8px;
 }
 
-.location-do-list-view {  
+.location-do-list-view {
   text-align: center;
   align-items: center;
   justify-items: center;
@@ -158,24 +153,24 @@
   gap: 30px;
 }
 
-.location-do-list-view-item {    
+.location-do-list-view-item {
   border: #000000 1px solid;
   width: 103px;
   height: 42px;
   border-radius: 56px;
   display: flex;
-  align-items: center;    /* 세로 중앙 정렬 */
+  align-items: center; /* 세로 중앙 정렬 */
   justify-content: center; /* 수평 중앙 정렬 */
 }
 
-.location-do-list-view-item-spe {    
+.location-do-list-view-item-spe {
   border: #490085 1px solid;
   color: #490085;
   width: 103px;
   height: 42px;
   border-radius: 56px;
   display: flex;
-  align-items: center;    /* 세로 중앙 정렬 */
+  align-items: center; /* 세로 중앙 정렬 */
   justify-content: center; /* 수평 중앙 정렬 */
 }
 
@@ -186,4 +181,174 @@
   border-radius: 56px;
   display: flex;
   flex-direction: row;
+}
+
+.search-location-si-result {
+  width: 343px;
+  margin: 0 15px 0 15px;
+  color: #490085;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 25px;
+  align-items: center; /* 세로 중앙 정렬 */
+}
+
+.location-si-select-btn {
+  width: 64px;
+  height: 28px;
+  border-radius: 56px;
+  color: #ffffff;
+  background-color: #490085;
+}
+
+.invite-profile {
+  width: 57px;
+  height: 57px;
+  border-radius: 50%;
+  border: #000000 1px solid;
+}
+
+.random-dot-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 5px;
+}
+
+.random-dot {
+  width: 8px;
+  height: 8px;
+  background-color: #490085;
+  border-radius: 50%;
+}
+
+.travel-header-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 20px;
+}
+
+.travel-box-container {
+  display: flex;
+  margin-top: 10px;
+  width: 100vw;
+  height: 709px;
+  border: 1px solid black;
+  border-radius: 40px 40px 0px 0px;
+  flex-direction: column;
+}
+
+.travel-box-inner-container-1 {
+  margin-top: 30px;
+  display: flex;
+  width: 400px;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.custom-underline {
+  text-decoration: underline;
+  text-decoration-color: #490085; /* 밑줄 색상 */
+  text-decoration-thickness: 6px; /* 밑줄 두께 */
+  text-underline-offset: 15px; /* 글자와 밑줄 간격 */
+}
+
+.period-dot {
+  display: flex;
+  background-color: #ede6f3;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  color: #787676;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+}
+
+.travel-box-inner-container-2 {
+  margin-top: 30px;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  justify-content: space-around;      
+}
+
+.travel-box-btn {
+  width: 20px;
+  height: 20px;
+  position: absolute;  
+}
+
+#ai-btn-postion {
+  right: 60px;
+  bottom: 30px;
+}
+
+#plus-btn-postion {
+  right: 30px;
+  bottom: 30px;
+}
+
+#tip-box {
+  position: absolute;
+  right: 60px;
+  bottom: 55px;
+  width: 268px;
+  height: 62px;
+}
+
+#tip-box-text {
+  position: absolute;
+  right: 42px;
+  bottom: 48px;
+  width: 268px;
+  height: 62px;
+}
+
+.tour-spots-container {
+  display: flex;
+  justify-content: center;
+}
+
+.tour-spots-view {
+  display: flex;  
+  width: 319px;
+  height: 55px;
+  margin-top: 28px;
+  
+}
+
+.tour-spots-checkbox {
+  display: flex;  
+  align-items: center;  
+  width: 30px;
+  height: 55px;
+}
+
+.tour-spots-card {
+  display: flex;
+  align-items: center;
+  border: #000000 1px solid;
+  border-radius: 8px;
+  width: 289px;
+  height: 55px;
+}
+
+.tour-spots-img {
+  width: 111px;
+  height: 53px;
+  border-radius: 7px;
+}
+
+.tour-spots-detail {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.tour-spots-detail-box {
+  display: flex;
+  margin-left: 5px;
+  margin-top: 7px;
 }
