--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,10 @@
 :root {
   /* :root를 사용하여 배경색 변경 */
   background-color: #ffffff; /* 작은 화면에서는 회색 배경 */
+  -webkit-user-select:none;
+  -moz-user-select:none;
+  -ms-user-select:none;
+  user-select:none
 }
 
 /* 아이폰 16 기준 반응형 설정 */
@@ -226,6 +230,6 @@
     font-size: 13px;
   }
 
-  
+
 
 }
