--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,10 +9,10 @@
   -webkit-user-select:none;
   -moz-user-select:none;
   -ms-user-select:none;
-  user-select:none
+  user-select:none;
 }
 
-/* 아이폰 16 기준 반응형 설정 */
+/* 아이폰 16 기준 반응형 설정  393 */
 @media screen and (max-width: 393px) {
   body {
     background-color: #ffffff; /* 작은 화면에서는 흰색 배경 */
@@ -225,11 +225,5 @@
     text-align: center; /* 텍스트 가운데 정렬 */
     /* border: rgb(51, 0, 255) 1px solid; */
   }
-
-  .travelgroups-font-size {    
-    font-size: 13px;
-  }
-
-
 
 }
