--- a/src/styles/travelgroups/travelgroups-style.css
+++ b/src/styles/travelgroups/travelgroups-style.css
@@ -233,7 +233,7 @@
 .travel-box-container {
   display: flex;
   margin-top: 10px;
-  width: 100vw;
+  width: 393px;
   height: 709px;
   border: 1px solid black;
   border-radius: 40px 40px 0px 0px;
@@ -272,13 +272,15 @@
   display: flex;
   width: 100%;
   justify-content: center;
-  justify-content: space-around;      
+  justify-content: space-around;
 }
 
 .travel-box-btn {
   width: 20px;
   height: 20px;
-  position: absolute;  
+  position: absolute;
+  z-index: 10;
+  position: fixed;  
 }
 
 #ai-btn-postion {
@@ -313,16 +315,15 @@
 }
 
 .tour-spots-view {
-  display: flex;  
+  display: flex;
   width: 319px;
   height: 55px;
   margin-top: 28px;
-  
 }
 
 .tour-spots-checkbox {
-  display: flex;  
-  align-items: center;  
+  display: flex;
+  align-items: center;
   width: 30px;
   height: 55px;
 }
@@ -351,4 +352,116 @@
   display: flex;
   margin-left: 5px;
   margin-top: 7px;
+}
+
+.schedule-set-modal-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 276px;
+  border: 1px solid black;
+  border-radius: 20px 20px 0 0;
+  /* 하단 고정 */
+  position: fixed;
+  bottom: 0;
+}
+
+.schedule-set-modal-text {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  padding: 15px;
+}
+
+.schedule-list-view-container {
+  margin: 30px;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+}
+
+.schedule-list-view {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.schedule-list-view-img {
+  width: 83px;
+  height: 83px;
+  border-radius: 12px;
+}
+.schedule-list-view-text {
+  display: flex;
+  flex-direction: row;
+  font-size: 12px;
+  margin-left: 15px;
+  align-items: center;
+}
+
+.travelgroups-font-size {
+  font-size: 13px;
+}
+
+.travelgroups-list-view-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;  
+  z-index: 1;
+  background-color: #ffffff;
+}
+
+.travelgroups-list-view {
+  display: flex;
+  flex-direction: column;
+  
+  justify-content: center;
+  padding: 20px 0 20px 0;
+}
+
+.travelgroups-list-view-profile-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20px 0 20px 0;
+}
+
+.travelgroups-list-view-profile {
+  display: flex;
+   
+  align-items: center;
+}
+
+.travelgroups-list-view-profile-img {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  border: 1px solid black;
+}
+
+.travelgroups-list-view-content-img {
+  width: 324px;
+  height: 207px;
+  border-radius: 16px;
+  border: 1px solid black;
+}
+
+.travelgroups-post-editer {
+  margin: 0 0 10px 10px;
+  font-size: 12px;
+  width: 95%;
+}
+
+.travelgroups-post-editer-icons {
+  display: flex;
+  justify-content: end;
+  margin-right: 20px;
+  gap: 40px;
+  
+}
+
+#travelgroups-post-editer-content {
+  
 }
