chore : 여행 모임 -> 여행 목록 범람 시 스크롤

--- a/src/styles/travelgroups/travelgroups-style.css
+++ b/src/styles/travelgroups/travelgroups-style.css
@@ -11,6 +11,10 @@
   width: 90vw; 
 }
 
+.travelgroup-get-container {
+  overflow: scroll;
+}
+
 
 .travelgroup-list-view-img {
   /* 동그라미 , 121*121 */
