--- a/src/styles/travelgroups/travelgroups-style.css
+++ b/src/styles/travelgroups/travelgroups-style.css
@@ -1,18 +1,18 @@
 .travelgroup-container {
   display: flex;
   flex-direction: column;
-  align-items: center;  
+  align-items: center;    
 }
 
 .travelgroup-list-view-container {
   display: flex;
   flex-direction: row;
   margin-bottom: 25px;
-  width: 90vw; 
+  width: 90vw;   
 }
 
 .travelgroup-get-container {
-  overflow: scroll;
+  overflow: auto;
 }
 
 
@@ -28,13 +28,14 @@
   display: flex;  
   flex-direction: column;
   margin-left: 30px;  
-  
+
 }
 
 .travelgroup-list-view-tag-row {
   display: flex;
   flex-direction: row;
-  gap: 5px;
+  gap: 5px;  
+  
 }
 
 .travelgroup-list-view-tag {
@@ -43,7 +44,7 @@
   border: 1px solid #000000;
   border-radius: 12px;
   margin-bottom: 5px;
-  width: fit-content;  
+  width: fit-content;    
 }
 
 .add-button {
@@ -118,7 +119,6 @@
   flex-direction: row;
   gap: 10px;
   padding: 0 8 0 8;
-  overflow: hidden;
   overflow-x: auto;
 }
 
