--- a/src/styles/travelgroups/travelgroups-style.css
+++ b/src/styles/travelgroups/travelgroups-style.css
@@ -407,17 +407,7 @@ html {
   align-items: center;
 }
 
-.schedule-set-modal-container {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 276px;
-  border: 1px solid black;
-  border-radius: 20px 20px 0 0;
-  /* 하단 고정 */
-  position: fixed;
-  bottom: 0;
-}
+
 
 .schedule-set-modal-text {
   display: flex;
@@ -571,21 +561,63 @@ html {
 
 .filter-container {
   margin-top: 20px;
-  width: 340px;
-  height: 30px;
-  display: flex;
-  flex-direction: row;
+  
+  height: 25px;
+  display: flex;  
   justify-content: center;
   align-items: center;
-  color: #000000;
+  color: #490085;;
   border-radius: 10px;
-  border: 1px solid #000000;
-  padding: 0 120px 0 120px;
-  background-color: #ffffff;
+  border: 1px solid #490085;
+  padding: 0 120px 0 120px;  
+  background-color: #FFFFFF;
 }
 
-.filter-select {
-  background-color: #ffffff;
-  border: none;
+.filter-select {  
+  background-color: #FFFFFF;
+  border: none;    
+}
+
+.schedule-set-modal-container {
+  position: fixed;
+  bottom: -100%; /* 기본적으로 화면 아래에 숨겨짐 */
+  left: 0;
   width: 100%;
+  height: 300px;
+  background-color: white;
+  transition: bottom 0.3s ease-in-out;
+  box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
+  z-index: 100;
+  border: 1px solid black;
+  border-radius: 20px 20px 0 0;
+}
+
+.schedule-set-modal-container.show {
+  bottom: 0; /* 위로 슬라이드 */
+}
+
+.schedule-set-modal-text {
+  display: flex;
+  justify-content: space-around;
+  padding: 20px;
+}
+.time-set-slider {
+  margin-top: 10px;
+  width: 80%;
+  height: 52px;
+  border-radius: 10px;
+  background-color: #490085;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.time-set-slider-input {
+  width: 100%;
+  height: 30px;
+  border-radius: 5px;  
+  background-color: #490085;
+  color: #ffffff;
+  text-align: center;
 }
