feat : 여행지 삭제 시 모달창 열람 기능 구현

--- a/src/styles/travelgroups/travelgroups-style.css
+++ b/src/styles/travelgroups/travelgroups-style.css
@@ -2,7 +2,6 @@ html {
   scroll-behavior: smooth;
 }
 
-
 .travelgroup-container {
   display: flex;
   flex-direction: column;
@@ -12,8 +11,11 @@ html {
 .travelgroup-list-view-container {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  padding: 0 0 0 10px;
   margin-bottom: 25px;
   width: 90vw;
+  border: 1px solid black;
 }
 
 .travelgroup-get-container {
@@ -265,7 +267,7 @@ html {
 .travel-header-container {
   display: flex;
   flex-direction: row;
-  align-items: center;  
+  align-items: center;
   margin-left: 20px;
 }
 
@@ -389,12 +391,11 @@ html {
   flex-direction: column;
   justify-content: center;
   width: 60%;
-  
 }
 .tour-spots-detail-box {
   display: flex;
   margin-left: 5px;
-  margin-top: 7px;  
+  margin-top: 7px;
 }
 
 .tour-span-img {
@@ -406,8 +407,6 @@ html {
   display: flex;
   align-items: center;
 }
-
-
 
 .schedule-set-modal-text {
   display: flex;
@@ -561,21 +560,21 @@ html {
 
 .filter-container {
   margin-top: 20px;
-  
+
   height: 25px;
-  display: flex;  
+  display: flex;
   justify-content: center;
   align-items: center;
-  color: #490085;;
+  color: #490085;
   border-radius: 10px;
   border: 1px solid #490085;
-  padding: 0 120px 0 120px;  
-  background-color: #FFFFFF;
+  padding: 0 120px 0 120px;
+  background-color: #ffffff;
 }
 
-.filter-select {  
-  background-color: #FFFFFF;
-  border: none;    
+.filter-select {
+  background-color: #ffffff;
+  border: none;
 }
 
 .schedule-set-modal-container {
@@ -616,7 +615,7 @@ html {
 .time-set-slider-input {
   width: 100%;
   height: 30px;
-  border-radius: 5px;  
+  border-radius: 5px;
   background-color: #490085;
   color: #ffffff;
   text-align: center;
@@ -624,16 +623,16 @@ html {
 
 #bottom-button-postion-time {
   position: fixed;
-  top : 750px;
+  top: 750px;
   left: 40px;
-  z-index: 99;  
+  z-index: 99;
 }
 
 #bottom-button-postion-delete {
   position: fixed;
   right: 40px;
-  top : 750px;
-  z-index: 99;  
+  top: 750px;
+  z-index: 99;
 }
 
 /* 래퍼: 오버플로우 숨기고 전체 너비 지정 */
@@ -648,9 +647,9 @@ html {
 .tour-spots-preview-container {
   margin-top: 15px;
   display: flex;
-  gap: 15px;                /* 아이템 간 간격 */
-  width: max-content;       /* 자식 콘텐츠 너비만큼 확장 */
-  height: 150px;            /* 컨테이너 높이 */
+  gap: 15px; /* 아이템 간 간격 */
+  width: max-content; /* 자식 콘텐츠 너비만큼 확장 */
+  height: 150px; /* 컨테이너 높이 */
   align-items: center;
   justify-content: center;
   animation: scroll 45s linear infinite; /* 30초로 속도 조절 */
@@ -668,15 +667,14 @@ html {
   height: 150px;
   display: flex;
   flex-direction: column;
-  align-items: center;  
-  
+  align-items: center;
 }
 
 /* 이미지 스타일 */
-.tour-spots-preview-card-img {  
+.tour-spots-preview-card-img {
   width: 100px;
   height: 100px;
-  border-radius: 12px; 
+  border-radius: 12px;
 }
 
 /* 스크롤 애니메이션 keyframes */
