--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,10 +6,10 @@
 :root {
   /* :root를 사용하여 배경색 변경 */
   background-color: #ffffff; /* 작은 화면에서는 회색 배경 */
-  -webkit-user-select:none;
-  -moz-user-select:none;
-  -ms-user-select:none;
-  user-select:none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 /* 아이폰 16 기준 반응형 설정  393 */
@@ -170,8 +170,8 @@
 
   .bottom-button-postion {
     position: fixed;
-    top : 750px;
-    z-index: 99; 
+    top: 750px;
+    z-index: 99;
   }
 
   /* 블랙 - 가장 굵게 */
@@ -214,7 +214,7 @@
     position: absolute; /* 부모 요소를 기준으로 위치 */
     left: 15px;
   }
-  
+
   .header-icon-option {
     /* border: rgb(51, 0, 255) 1px solid; */
     position: absolute; /* 부모 요소를 기준으로 위치 */
@@ -226,4 +226,18 @@
     /* border: rgb(51, 0, 255) 1px solid; */
   }
 
+  .footer-container {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 50px; /* 원하는 높이 설정 */
+    
+    background-color: white; /* 배경색 */
+    display: flex;
+    justify-content: space-around; /* 아이템 간 충분한 간격 */
+    align-items: center;
+  }
+  .footer-item {
+    cursor: pointer; /* 마우스 올릴 때 포인터 */
+  }
 }
