--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -258,12 +258,13 @@ body {
     gap: 10px;
 
     margin-top: 10px;
-    width: 345px;
-    height: 328px;
-    
+    width: 345px !important;
+    height: 328px !important;
+
     overflow: auto;
 
     scroll-behavior: smooth;
+
     scrollbar-width: none; /* Firefox에서 스크롤바 숨기기 */
     -webkit-scrollbar-width: none; /* Chrome, Safari에서 스크롤바 숨기기 */
   }
@@ -275,9 +276,9 @@ body {
   .main-list-img {
     width: 330px;
     height: 328px;
-    border-radius: 35px;
-    border: 1px solid black;
-    background-color: #747474;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .main-list-text {
@@ -288,15 +289,16 @@ body {
     bottom: 0;
     margin-left: 25px;
     margin-bottom: 15px;
+    text-shadow: 0.5px 0.5px 7px rgba(0, 0, 0, 0.25),
+      -0.5px -0.5px 7px rgba(0, 0, 0, 0.25); /* 테두리 그림자 추가 */
   }
 
   .main-list-profile {
-    width: 60px;
-    height: 60px;
+    width: 60px !important;
+    height: 60px !important;
     border-radius: 50%;
     z-index: 10;
     position: absolute;
-    border: #ffffff 1px solid;
     left: 0;
     bottom: 0;
     margin-left: 25px;
