--- a/src/styles/travelgroups/travelgroups-style.css
+++ b/src/styles/travelgroups/travelgroups-style.css
@@ -332,12 +332,12 @@ html {
 
 #ai-btn-postion {
   right: 60px;
-  bottom: 60px;
+  bottom: 90px;
 }
 
 #plus-btn-postion {
   right: 30px;
-  bottom: 60px;
+  bottom: 90px;
 }
 
 #tip-box {
@@ -382,8 +382,9 @@ html {
   align-items: center;
   border: #000000 1px solid;
   border-radius: 8px;
-  width: 289px;
+  width: 279px;
   height: 55px;
+  margin-left: 10px;
 }
 
 .tour-spots-img {
@@ -488,7 +489,6 @@ html {
   border-radius: 50%;
   width: 50px;
   height: 50px;
-  border: 1px solid black;
 }
 
 .travelgroups-list-view-content-img {
@@ -590,7 +590,7 @@ html {
   bottom: -100%; /* 기본적으로 화면 아래에 숨겨짐 */
   left: 0;
   width: 100%;
-  height: 300px;
+  height: 330px;
   background-color: white;
   transition: bottom 0.3s ease-in-out;
   box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
@@ -631,7 +631,7 @@ html {
 
 #bottom-button-postion-time {
   position: fixed;
-  top: 750px;
+  top: 700px;
   left: 40px;
   z-index: 99;
 }
@@ -639,7 +639,7 @@ html {
 #bottom-button-postion-delete {
   position: fixed;
   right: 40px;
-  top: 750px;
+  top: 700px;
   z-index: 99;
 }
 
