fix : 여행 목록 하단 바 수정

--- a/src/styles/travelgroups/travelgroups-style.css
+++ b/src/styles/travelgroups/travelgroups-style.css
@@ -148,8 +148,8 @@ html {
 
 .travel-list-img-bar {
   margin-top: 10px;
-  width: 54;
-  height: 11;
+  width: 54px;
+  height: 11px;
   border: #490085 1px solid;
   border-radius: 5.5;
   background-color: #490085;
