--- a/src/styles/travelgroups/travelgroups-style.css
+++ b/src/styles/travelgroups/travelgroups-style.css
@@ -151,7 +151,7 @@ html {
   width: 54px;
   height: 11px;
   border: #490085 1px solid;
-  border-radius: 5.5;
+  border-radius: 5.5px;
   background-color: #490085;
 }
 
