--- a/src/styles/travelgroups/travelgroups-style.css
+++ b/src/styles/travelgroups/travelgroups-style.css
@@ -121,6 +121,7 @@ html {
   border: 1px #787676 solid;
   display: flex;
   flex-direction: column;
+  padding-bottom: 8px;
 }
 
 .travel-list-view-text {
@@ -133,18 +134,20 @@ html {
 .travel-list-img-view {
   display: flex;
   flex-direction: row;
-  gap: 10px;
-  padding: 0 8 0 8;
+  gap: 20px;
+  padding: 0px 8px 0px 8px;
   overflow-x: scroll;
   scrollbar-width: none; /* Firefox에서 스크롤바 숨기기 */
   -webkit-scrollbar-width: none; /* Chrome, Safari에서 스크롤바 숨기기 */
+   
 }
 
-.travel-list-img {
-  width: 159px;
-  height: 201px;
+.travel-list-img {  
+  width: 170px;
+  /* height: 201px; */
   border-radius: 13px;
-  
+  border: 1px solid black;
+   
 }
 
 .travel-list-img-bar {
